--- a/startbootstrap-freelancer-1.0.2 3/index.html
+++ b/startbootstrap-freelancer-1.0.2 3/index.html
@@ -154,7 +154,6 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>Contact Me</h2>
-                    <hr class="star-primary">
                 </div>
             </div>
             <div class="row">
@@ -209,7 +208,7 @@
             <div class="container">
                 <div class="row">
 
-                    <div class="footer-col col-md-4">
+                    <div class="footer-col col-md-4-center">
                         <h3>Around the Web</h3>
                         <ul class="list-inline">
 
