Wrote about details for portfolio projects

--- a/bogil website/index.html
+++ b/bogil website/index.html
@@ -95,13 +95,13 @@
             </div>
             <div class="row">
                 <div class="text-center">
-                    <p>My name is John, I'm an iOS Developer. I chose to work in iOS Development because it offers a unique blend of engineering and creative design. The intersection of the left and right brain are where great ideas come from.  </p>
+                    <p>My name is John, I'm an iOS Developer. I enjoy working in iOS Development because it offers a unique blend of engineering and creative design. The intersection of the left and right brain are where great ideas come from.  </p>
                 </div>
                 <div class="text-center">
                     <p>I was first introduced to mobile development while working with a trade association that represented tech companies in Washington, D.C. From there, I was hooked and started attending every programming meetup that I could find in the city. However D.C. is no Silicon Valley (or Alley) and it was sometimes difficult to find meetups that weren't just sales pitches for classes and bootcamps. Eventually I returned home to New York where I spent some time as a paralegal working in corporate finance. That didn't last very long, as I decided that I would rather build things than destroy things. So I left my job to pursue iOS development full time and haven't looked back since.</p>
                 </div>
                 <div class="text-center">
-                    <p>When I'm not building things, I enjoy running, sharing music with friends, and reading the blogs from Capitol Hill. </p>
+                    <p>When I'm not programming, I enjoy running, sharing music with friends, and reading the blogs from Capitol Hill. </p>
                 </div>
 
 
@@ -145,7 +145,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/circus.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/githublogo.png" height="200" width="400">
                     </a>
                 </div>
 
@@ -258,22 +258,10 @@
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
                             <h2>Voices</h2>
-                            <img src="img/portfolio/voices.jpg" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
-                            <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-                                    </strong>
-                                </li>
-                                <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
-                                    </strong>
-                                </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
-                                    </strong>
-                                </li>
-                            </ul>
+                            <img src="img/portfolio/voices.png" class="img-responsive img-centered" alt="">
+                            <p>Voices is an iOS application that facilitates communication between citizens and their Congressional representatives</p>
+                            <p>Expected release: March 2015</p>
+
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
                     </div>
@@ -293,24 +281,10 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
-                            <hr class="star-primary">
+                            <h2>MusicQ</h2>
                             <img src="img/portfolio/musicq.jpg" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
-                            <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-                                    </strong>
-                                </li>
-                                <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
-                                    </strong>
-                                </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
-                                    </strong>
-                                </li>
-                            </ul>
+                            <p>MusicQ is an iOS application currently in preproduction. MusicQ will use Apple's MultiPeer Connectivity Framework to enable multiple users to queue up songs on a single host device for playback</p>
+
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
                     </div>
@@ -331,7 +305,6 @@
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
                             <h2>Project Title</h2>
-                            <hr class="star-primary">
                             <img src="img/portfolio/circus.png" class="img-responsive img-centered" alt="">
                             <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
                             <ul class="list-inline item-details">
