Added profile picture

--- a/bogil website/index.html
+++ b/bogil website/index.html
@@ -91,6 +91,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>About</h2>
+                    <hr class="star-primary">
                 </div>
             </div>
             <div class="row">
@@ -98,7 +99,7 @@
                     <p>I enjoy working in mobile development because it offers a unique blend of engineering and creative design. The intersection of the left and right brain are where great ideas come from.  </p>
                 </div>
                 <div class="text-center">
-                    <p>I was first introduced to mobile development while working with a trade association that represented tech companies in Washington, D.C. From there, I was hooked and started attending every programming meetup that I could find in the city. Eventually I returned home to New York where I spent some time as a paralegal working in corporate finance. That didn't last very long, as I decided that I would rather spend my time creating. So I left my job to pursue iOS development full time and haven't looked back since.</p>
+                    <p>I was first introduced to mobile development while working with a trade association that represented tech companies in Washington, D.C. From there, I was hooked and started attending every programming meetup that I could find in the city. Eventually I returned home to New York where I decided to pursue iOS development full time and haven't looked back since.</p>
                 </div>
                 <div class="text-center">
                     <p>When I'm not programming, I enjoy running, sharing music with friends, and reading the blogs from Capitol Hill. </p>
@@ -115,6 +116,8 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>Portfolio</h2>
+                    <h5>Select an image for more information</h5>
+                    <hr class="star-primary">
                 </div>
                 </div>
             <div class="row">
@@ -160,6 +163,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>Contact Me</h2>
+                    <hr class="star-primary">
                 </div>
             </div>
             <div class="row">
@@ -260,7 +264,7 @@
                             <h2>Voices</h2>
                             <img src="img/portfolio/voices.jpg" class="img-responsive img-centered" alt="">
                             <p>Voices is an iOS application that facilitates communication between citizens and their Congressional representatives</p>
-                            <p>Expected release: March 2015</p>
+                            <p>Expected release: February 2015</p>
 
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
@@ -282,7 +286,7 @@
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
                             <h2>MusicQ</h2>
-                            <img src="img/portfolio/musicq.jpg" class="img-responsive img-centered" alt="">
+                            <img src="img/portfolio/musicqoriginal.jpg" class="img-responsive img-centered" alt="">
                             <p>MusicQ is an iOS application currently in preproduction. MusicQ will use Apple's MultiPeer Connectivity Framework to enable multiple users to queue up songs on a single host device for playback</p>
 
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
