--- a/bogil website/index.html
+++ b/bogil website/index.html
@@ -115,7 +115,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Portfolio</h2>
+                    <h2 align="center">Portfolio</h2>
                     <h5>Select an image for more information</h5>
                     <hr class="star-primary">
                 </div>
