Added app store badge

--- a/bogil website/index.html
+++ b/bogil website/index.html
@@ -96,10 +96,10 @@
             </div>
             <div class="row">
                 <div class="text-center">
-                    <p>I enjoy working in mobile development because it offers a unique blend of engineering and creative design. The intersection of the left and right brain are where great ideas come from.  </p>
+                    <p>Hi, my name is John, I'm an iOS Developer from New York City. I enjoy working in mobile development because it offers a unique blend of engineering and creative design.  </p>
                 </div>
                 <div class="text-center">
-                    <p>I was first introduced to mobile development while working with a trade association that represented tech companies in Washington, D.C. From there, I was hooked and started attending every programming meetup that I could find in the city. Eventually I returned home to New York where I decided to pursue iOS development full time and haven't looked back since.</p>
+                    <p>Before I decided to pursue iOS Development full time, I worked in politics. </p>
                 </div>
                 <div class="text-center">
                     <p>When I'm not programming, I enjoy running, sharing music with friends, and reading the blogs from Capitol Hill. </p>
@@ -264,7 +264,10 @@
                             <h2>Voices</h2>
                             <img src="img/portfolio/voices.jpg" class="img-responsive img-centered" alt="">
                             <p>Voices is an iOS application that facilitates communication between citizens and their Congressional representatives</p>
-                            <p>Expected release: February 2015</p>
+
+                            <a href="https://itunes.apple.com/WebObjects/MZStore.woa/wa/viewSoftware?id=965692648&mt=8" target="_blank">
+                                <img src="img/portfolio/appstore.jpg" class="img-responsive img-centered" alt=""></a>
+
 
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
