Made updates to mq project

--- a/bogil website/index.html
+++ b/bogil website/index.html
@@ -263,7 +263,7 @@
                         <div class="modal-body">
                             <h2>Voices</h2>
                             <img src="img/portfolio/voices.jpg" class="img-responsive img-centered" alt="">
-                            <p>Voices is an iOS application that facilitates communication between citizens and their Congressional representatives</p>
+                            <p>Voices is an iOS application that facilitates communication between people and their Congressional representatives</p>
 
                             <a href="https://itunes.apple.com/WebObjects/MZStore.woa/wa/viewSoftware?id=965692648&mt=8" target="_blank">
                                 <img src="img/portfolio/appstore.jpg" class="img-responsive img-centered" alt=""></a>
@@ -290,7 +290,9 @@
                         <div class="modal-body">
                             <h2>MusicQ</h2>
                             <img src="img/portfolio/musicqoriginal.jpg" class="img-responsive img-centered" alt="">
-                            <p>MusicQ is an iOS application currently in preproduction. MusicQ will use Apple's MultiPeer Connectivity Framework to enable multiple users to queue up songs on a single host device for playback</p>
+                            <p>MusicQ is an iOS application that lets people to share music over Wifi or Bluetooth. It uses Apple's MultiPeer Connectivity Framework to enable multiple users to queue up songs on a single host device for playback</p>
+
+                            <p>Expected release: March 2015</p>
 
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
